// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildSchema > integration > required > should invalidate empty string if a text field is required 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "!0",
    "input": "",
    "issues": undefined,
    "kind": "validation",
    "lang": undefined,
    "message": "Invalid length: Expected !0 but received 0",
    "path": undefined,
    "received": "0",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "non_empty",
  },
]
`;

exports[`buildSchema > integration > required > should invalidate undefined if field is required 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "string",
    "input": undefined,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected string but received undefined",
    "path": undefined,
    "received": "undefined",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "string",
  },
]
`;

exports[`buildSchema > integration > required > should invalidate undefined if field is required 2`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "number",
    "input": undefined,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected number but received undefined",
    "path": undefined,
    "received": "undefined",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "number",
  },
]
`;

exports[`buildSchema > integration > required > should invalidate undefined if field is required 3`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "boolean",
    "input": undefined,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected boolean but received undefined",
    "path": undefined,
    "received": "undefined",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "boolean",
  },
]
`;

exports[`buildSchema > integration > required > should invalidate undefined if field is required 4`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "Date",
    "input": undefined,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected Date but received undefined",
    "path": undefined,
    "received": "undefined",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "date",
  },
]
`;

exports[`buildSchema > integration > required > should invalidate undefined if field is required 5`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "BigNumber",
    "input": undefined,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected BigNumber but received undefined",
    "path": undefined,
    "received": "undefined",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "instance",
  },
]
`;

exports[`buildSchema > integration > types - bool > should invalidate non-boolean input if field type is bool 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "boolean",
    "input": "abc",
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected boolean but received "abc"",
    "path": undefined,
    "received": ""abc"",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "boolean",
  },
]
`;

exports[`buildSchema > integration > types - datetime > should invalidate non-Date input if field type is datetime 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "Date",
    "input": "2024-01-01T00:00:00.000Z",
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected Date but received M",
    "path": undefined,
    "received": "M",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "date",
  },
]
`;

exports[`buildSchema > integration > types - decimal > should invalidate non-BigNumber input if field type is decimal 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "BigNumber",
    "input": 123.45,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected BigNumber but received 123.45",
    "path": undefined,
    "received": "123.45",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "instance",
  },
]
`;

exports[`buildSchema > integration > types - num > should invalidate non-number input if field type is num 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "number",
    "input": "abc",
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected number but received "abc"",
    "path": undefined,
    "received": ""abc"",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "number",
  },
]
`;

exports[`buildSchema > integration > types - text > should invalidate non-string input if field type is text 1`] = `
[
  {
    "abortEarly": undefined,
    "abortPipeEarly": undefined,
    "expected": "string",
    "input": 123,
    "issues": undefined,
    "kind": "schema",
    "lang": undefined,
    "message": "Invalid type: Expected string but received 123",
    "path": undefined,
    "received": "123",
    "requirement": undefined,
    "skipPipe": undefined,
    "type": "string",
  },
]
`;
